# vision-transformer

./: .gitignore  Dockerfile  README.md  pyproject.toml  train.sh
configs/: train_config.yaml
scripts/: config.py  dataset.py  model.py  train.py
scripts/libs/: utils.py
