[tool.poetry]
name = "vision-transformer"
version = "0.1.0"
description = ""
authors = ["HirotoOsaka <ipocchi129@gmail.com>"]
readme = "README.md"
packages = [{include = "vision_transformer"}]

[tool.poetry.dependencies]
python = "3.10.11"
torch = "^2.5.1"
torchvision = "^0.20.1"
wandb = "^0.18.7"
hydra-core = "^1.3.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
